# hyperhook

./: Cargo.toml  README.md  config.yaml
examples/: README.md  fuzz_example_unix.rs  hook_example_windows.rs  run_example.rs
examples/fuzz_target/: Cargo.toml  build.rs
examples/fuzz_target/src/: to_fuzz.c
examples/selffuzz/: Cargo.toml  README.md  build.rs  setup_nyx_linux.sh
examples/selffuzz/src/: main.rs  unix_to_fuzz.c  win_to_fuzz.c
src/: config.rs  hooking.rs  lib.rs  misc.rs  modules.rs  modules_unix.rs  modules_windows.rs  nyx.rs
