[package]
name = "hyperhook"
version = "0.1.0"
edition = "2021"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "psapi", "libloaderapi", "errhandlingapi", "winbase", "processthreadsapi"] }

[dependencies]
config = { version="0.13.1", features = ["yaml"] }
once_cell = "1.18.0"
serde = "1.0.164"
log = "0.4.19"
simplelog = { version = "0.12.1", features = ["termcolor"] }
retour = { git = "https://github.com/Hpmason/retour-rs" }
document-features = "0.2"

[target.'cfg(unix)'.dependencies]
redhook = "2.0.0"
phdrs = { git = "https://github.com/softdevteam/phdrs" }
goblin = "0.8.0"
libc = "*"
nix = "0.26.2"

[dev-dependencies]
clap = { version = "4.0", features = ["derive"] }

[lib]
name = "hyperhook"
crate_type = ["dylib", "lib"]

[[example]]
name = "fuzz_example_windows"
crate-type = ["cdylib"]

[[example]]
name = "fuzz_example_unix"
crate-type = ["cdylib"]

[features]
default = ["pt", "kafl"]
#! # Feature Flags

## If set, HyperHook assumes the host supports Intel-PT
pt = []
## If set, HyperHook assumes that the host runs kAFL Kernel
kafl = []
